  
- Implemented FR #49571 (CURLOPT_POSTREDIR not implemented). (Sriram Natarajan)
- Implemented FR #49253 (added support for libcurl's CERTINFO option).
  (Linus Nielsen Feltzing <linus@haxx.se>)

- Fixed unnecessary invocation of setitimer when timeouts have been disabled.
  (Arvind Srinivasan)
- Fixed memory leak in extension loading when an error occurs on Windows.
  (Pierre)

- Fixed bug #50087 (NSAPI performance improvements). (Uwe Schindler)
- Fixed bug #50152 (ReflectionClass::hasProperty behaves like isset() not
  property_exists). (Felipe)
- Fixed bug #50146 (property_exists: Closure object cannot have properties).
  (Felipe)
- Fixed bug #50073 (parse_url() incorrect when ? in fragment). (Ilia)
- Fixed bug #50023 (pdo_mysql doesn't use PHP_MYSQL_UNIX_SOCK_ADDR). (Ilia)
- Fixed bug #50005 (Throwing through Reflection modified Exception object
  makes segmentation fault). (Felipe)
- Fixed bug #49990 (SNMP3 warning message about security level printed twice).
  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted
  transaction). (ben dot pineau at gmail dot com, Ilia, Matteo)  
- Fixed bug #49938 (Phar::isBuffering() returns inverted value). (Greg)
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49910 (no support for ././@LongLink for long filenames in phar
  tar support). (Greg)
- Fixed bug #49908 (throwing exceptions in __autoload crashes when interface
  is not defined). (Felipe)
- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia,
  sjoerd at php dot net)
- Fixed bug #49800 (SimpleXML allow (un)serialize() calls without warning).
  (Ilia, wmeler at wp-sa dot pl)
- Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private
  property in base class). (Felipe)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49244 (Floating point NaN cause garbage characters). (Sjoerd)
- Fixed bug #49224 (Compile error due to old DNS functions on AIX systems).
  (Scott)